# taller-lab01

./: DESIGN.md  README.md
backend/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
backend/app/: auth.py  main.py  models.py
backend/app/tests/: test_auth.py
frontend/: README.md  index.html  vite.config.js
frontend/src/: App.css  App.jsx  index.css
frontend/src/components/: ProtectedRoute.jsx
frontend/src/context/: AuthContext.jsx
frontend/src/pages/: LoginPage.jsx  LoginPage.module.css  WelcomePage.jsx  WelcomePage.module.css
